src/objects/Industry__c.object
<CustomObject>
    <fields>
        <fullName>Associted_Case_Subject__c</fullName>
        <description>To display case subject manner when looking up on industrial hierarchy</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;  Case_Industrial_Hierarchy__r.Id  ,Case_Industrial_Hierarchy__r.Subject,&quot;_self&quot;)</formula>
        <label>Associated Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Industrial_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Do not edit these fields</inlineHelpText>
        <label>Case Industrial Hierarchy</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Industry_Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; &amp; Case_Industrial_Hierarchy__c , Case_Industrial_Hierarchy__r.Subject,&quot;_self&quot;)</formula>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_One__c</fullName>
        <formula>1</formula>
        <label>Industry One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry_Text__c</fullName>
        <label>Industry Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <inlineHelpText>You must select an Industry before you can save the record.</inlineHelpText>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace and Defense</fullName>
                </value>
                <value>
                    <fullName>Agribusiness</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Business and Professional Services</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Distribution and Logistics</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Environmental Technology</fullName>
                </value>
                <value>
                    <fullName>Equipment and Machinery</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Food and Beverage</fullName>
                </value>
                <value>
                    <fullName>Franchising</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Industrial Materials</fullName>
                </value>
                <value>
                    <fullName>Information and Communications Technology</fullName>
                </value>
                <value>
                    <fullName>Marine Technology</fullName>
                </value>
                <value>
                    <fullName>Media and Entertainment</fullName>
                </value>
                <value>
                    <fullName>Non-Profits and Associations</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Retail Trade</fullName>
                </value>
                <value>
                    <fullName>Safety &amp; Security</fullName>
                </value>
                <value>
                    <fullName>Textiles and Apparel</fullName>
                </value>
                <value>
                    <fullName>Travel and Tourism</fullName>
                </value>
                <value>
                    <fullName>Wholesale Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Industry_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Do not edit these fields</inlineHelpText>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>OrgIndustryHierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>Participation__c</referenceTo>
        <relationshipLabel>Industries</relationshipLabel>
        <relationshipName>Industries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sector_Text__c</fullName>
        <label>Sector Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Access Control Systems</fullName>
                </value>
                <value>
                    <fullName>Accommodations</fullName>
                </value>
                <value>
                    <fullName>Accounting Services</fullName>
                </value>
                <value>
                    <fullName>Adult Education and Training</fullName>
                </value>
                <value>
                    <fullName>Advertising Services</fullName>
                </value>
                <value>
                    <fullName>Agricultural Chemicals</fullName>
                </value>
                <value>
                    <fullName>Agricultural Equipment and Machinery</fullName>
                </value>
                <value>
                    <fullName>Air Pollution Control</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Architecture Services</fullName>
                </value>
                <value>
                    <fullName>Artwork</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Audio-Visual Equipment</fullName>
                </value>
                <value>
                    <fullName>Automobiles</fullName>
                </value>
                <value>
                    <fullName>Automotive Aftermarket</fullName>
                </value>
                <value>
                    <fullName>Automotive Parts</fullName>
                </value>
                <value>
                    <fullName>Automotive Repair Services</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Bakeries</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beverages</fullName>
                </value>
                <value>
                    <fullName>Building Products and Equipment</fullName>
                </value>
                <value>
                    <fullName>Buses</fullName>
                </value>
                <value>
                    <fullName>Business Associations</fullName>
                </value>
                <value>
                    <fullName>Business Equipment</fullName>
                </value>
                <value>
                    <fullName>Catalog and Mail Order</fullName>
                </value>
                <value>
                    <fullName>Ceramics</fullName>
                </value>
                <value>
                    <fullName>Chambers of Commerce</fullName>
                </value>
                <value>
                    <fullName>Chemical Production Machinery</fullName>
                </value>
                <value>
                    <fullName>Civil Nuclear Power</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Sector_Text__c</fullName>
        <label>Sub-Sector Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sector__c</fullName>
        <label>Sub-Sector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sector__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aircraft and Aircraft Parts</fullName>
                </value>
                <value>
                    <fullName>Airport and Ground Support Equipment</fullName>
                </value>
                <value>
                    <fullName>Air Traffic Control Equipment</fullName>
                </value>
                <value>
                    <fullName>Air Transportation</fullName>
                </value>
                <value>
                    <fullName>Air Travel</fullName>
                </value>
                <value>
                    <fullName>Asphalt</fullName>
                </value>
                <value>
                    <fullName>Aviation Security Equipment</fullName>
                </value>
                <value>
                    <fullName>Avionics</fullName>
                </value>
                <value>
                    <fullName>Beer</fullName>
                </value>
                <value>
                    <fullName>Bicycles</fullName>
                </value>
                <value>
                    <fullName>Biodiesel</fullName>
                </value>
                <value>
                    <fullName>Biomass Equipment</fullName>
                </value>
                <value>
                    <fullName>Biopharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Books and Periodicals Publishing</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Bus Service</fullName>
                </value>
                <value>
                    <fullName>Car Rentals</fullName>
                </value>
                <value>
                    <fullName>Cement and Concrete</fullName>
                </value>
                <value>
                    <fullName>Clean Coal Technology</fullName>
                </value>
                <value>
                    <fullName>Coal Gasification Systems</fullName>
                </value>
                <value>
                    <fullName>Coffee</fullName>
                </value>
                <value>
                    <fullName>Commercial Fishing Equipment</fullName>
                </value>
                <value>
                    <fullName>Commercial Vessel Equipment</fullName>
                </value>
                <value>
                    <fullName>Commission Agents</fullName>
                </value>
                <value>
                    <fullName>Computer Peripherals</fullName>
                </value>
                <value>
                    <fullName>Computer Services</fullName>
                </value>
                <value>
                    <fullName>Construction Equipment</fullName>
                </value>
                <value>
                    <fullName>Custom Brokerage</fullName>
                </value>
                <value>
                    <fullName>Cutting Tools</fullName>
                </value>
                <value>
                    <fullName>Dental Equipment and Supplies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WIN_Industrial_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Do not edit these fields</inlineHelpText>
        <label>WIN Industrial Hierarchy</label>
        <referenceTo>WIN__c</referenceTo>
        <relationshipName>WINIndustrialHierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WIN_Name__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; &amp; WIN_Industrial_Hierarchy__c, WIN_Industrial_Hierarchy__r.Name,&quot;_self&quot;)</formula>
        <label>WIN Name</label>
        <type>Text</type>
    </fields>
    <label>Industry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Industry__c</columns>
        <columns>Organization__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IH-{0000}</displayFormat>
        <label>Industry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Industries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Industry_must_be_selected</fullName>
        <active>true</active>
        <description>Must select at least an entry on Industry picklist.</description>
        <errorConditionFormula>ISPICKVAL(Industry__c,&quot;&quot; )</errorConditionFormula>
        <errorDisplayField>Industry__c</errorDisplayField>
        <errorMessage>You must select an Industry.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lookup_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>( IF(ISBLANK( Organization__c ),0,1) + 
  IF(ISBLANK( WIN_Industrial_Hierarchy__c ),0,1) + 
  IF(ISBLANK( Case_Industrial_Hierarchy__c ),0,1)
) &gt; 1</errorConditionFormula>
        <errorMessage>Can only update one of the following fields:  Organization, Case Industrial Hierarchy, or WIN Industrial Hierarchy.</errorMessage>
    </validationRules>
</CustomObject>